k3s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: luwah-site
  labels:
    app.kubernetes.io/part-of: luwah
